src/objects/SomDig_Verteilungsschluessel__c.object
<CustomObject>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_AdServerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Gebe hier die AdServerId von Typ &quot;Ad Unit&quot; ein. Bitte in DFP nachprüfen, welche Ad Units zu der Rotation gehören.</description>
        <inlineHelpText>Gebe hier die AdServerId von Typ &quot;Ad Unit&quot; ein. Bitte in DFP nachprüfen, welche Ad Units zu der Rotation gehören.</inlineHelpText>
        <label>AdServer ID</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>ADvendio__AdServer_ID__c.ADvendio__Type__c</field>
                <operation>equals</operation>
                <value>Ad Unit</value>
            </filterItems>
            <filterItems>
                <field>ADvendio__AdServer_ID__c.ADvendio__Site__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ADvendio__AdServer_ID__c</referenceTo>
        <relationshipLabel>Verteilungsschlüssel</relationshipLabel>
        <relationshipName>SomDig_Verteilungsschluessel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_AntizipationsVS__c</fullName>
        <label>Antizipationsverteilungsschlüssel</label>
        <referenceTo>SomDig_AntizipationsVS__c</referenceTo>
        <relationshipLabel>Verteilungsschlüssel</relationshipLabel>
        <relationshipName>SomDig_Verteilungsschluessel</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SomDig_Prozentsatz__c</fullName>
        <label>Prozentsatz</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomDig_Werbetraeger__c</fullName>
        <formula>SomDig_AdServerId__r.ADvendio__Site__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Werbeträger</label>
        <type>Text</type>
    </fields>
    <label>Verteilungsschlüssel</label>
    <nameField>
        <displayFormat>VS-{000000}</displayFormat>
        <label>Verteilungsschlüssel-Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Verteilungsschlüssel</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>